feat: first tests

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ dist-ssr
 *.tsbuildinfo
 
 package-lock.json
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
