--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
     "test": "playwright test",
+    "test:report": "playwright show-report",
     "test:flaky": "scripts/flaky-test-run.sh",
     "test:flaky:all": "scripts/flaky-test-run-all.sh",
+    "test:unit": "vitest",
+    "test:unit:ui": "vitest --ui",
     "test:ui": "playwright test --ui",
     "test:debug": "playwright test --debug"
   },
@@ -21,15 +24,19 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "@reduxjs/toolkit": "^2.2.5"
   },
   "devDependencies": {
     "@redux-devtools/extension": "^3.3.0",
     "@playwright/test": "^1.52.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^22.15.30",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^3.2.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.31.0",
@@ -37,9 +44,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "jsdom": "^26.1.0",
     "prettier": "^3.2.5",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.33.0",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vitest": "^3.2.3"
   }
 }
