--- a/package.json
+++ b/package.json
@@ -10,32 +10,38 @@
     "lint:fix": "eslint . --fix && prettier --write \"src/**/*.{ts,tsx,css}\"",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
-    "test": "playwright test",
+    "test": "npm run test:all",
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "test:e2e": "playwright test",
+    "test:e2e:report": "playwright show-report",
+    "test:functional": "playwright test --grep-invert \".screenshot.spec.ts\"",
+    "test:screenshots": "playwright test --grep \".screenshot.spec.ts\"",
     "test:report": "playwright show-report",
     "test:flaky": "scripts/flaky-test-run.sh",
     "test:flaky:all": "scripts/flaky-test-run-all.sh",
-    "test:unit": "vitest",
+    "test:unit": "vitest --exclude src/pages/**/*.test.tsx",
+    "test:integration": "vitest",
     "test:unit:ui": "vitest --ui",
     "test:ui": "playwright test --ui",
     "test:debug": "playwright test --debug"
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.6.1",
     "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "zustand": "^4.5.2",
-    "@reduxjs/toolkit": "^2.2.5"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.53.0",
     "@redux-devtools/extension": "^3.3.0",
-    "@playwright/test": "^1.52.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^22.15.30",
+    "@types/node": "^22.15.31",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.5.2",
     "@vitest/ui": "^3.2.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^10.1.5",
@@ -47,7 +53,7 @@
     "jsdom": "^26.1.0",
     "prettier": "^3.2.5",
     "typescript": "^5.2.2",
-    "typescript-eslint": "^8.33.0",
+    "typescript-eslint": "^8.34.0",
     "vite": "^5.1.6",
     "vitest": "^3.2.3"
   }
