feat: add new docs

--- a/package.json
+++ b/package.json
@@ -6,24 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --fix && prettier --write \"src/**/*.{ts,tsx,css}\"",
     "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "format": "prettier --write .",
     "test": "npm run test:all",
     "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "test:unit": "vitest run --exclude src/pages/**/*.test.tsx",
+    "test:integration": "vitest run",
     "test:e2e": "playwright test",
+    "test:unit:ui": "vitest --ui",
+    "test:e2e:ui": "playwright test --ui",
     "test:e2e:report": "playwright show-report",
-    "test:functional": "playwright test --grep-invert \".screenshot.spec.ts\"",
-    "test:screenshots": "playwright test --grep \".screenshot.spec.ts\"",
-    "test:report": "playwright show-report",
+    "test:debug": "playwright test --debug",
+    "test:functional": "playwright test --grep-invert \\\".screenshot.spec.ts\\\"",
+    "test:screenshots": "playwright test --grep \\\".screenshot.spec.ts\\\"",
     "test:flaky": "scripts/flaky-test-run.sh",
     "test:flaky:all": "scripts/flaky-test-run-all.sh",
-    "test:unit": "vitest --exclude src/pages/**/*.test.tsx",
-    "test:integration": "vitest",
-    "test:unit:ui": "vitest --ui",
-    "test:ui": "playwright test --ui",
-    "test:debug": "playwright test --debug"
+    "prepare": "husky"
   },
   "dependencies": {
     "@testing-library/user-event": "^14.6.1",
@@ -31,11 +31,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "@redux-devtools/extension": "^3.3.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.53.0",
-    "@redux-devtools/extension": "^3.3.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.15.31",
