feat: add storybook

--- a/package.json
+++ b/package.json
@@ -1,60 +1,72 @@
 {
-  "name": "shri-2025",
-  "private": true,
-  "version": "0.1.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext ts,tsx --fix",
-    "format": "prettier --write .",
-    "test": "npm run test:all",
-    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
-    "test:unit": "vitest run --exclude src/pages/**/*.test.tsx",
-    "test:integration": "vitest run",
-    "test:e2e": "playwright test",
-    "test:unit:ui": "vitest --ui",
-    "test:e2e:ui": "playwright test --ui",
-    "test:e2e:report": "playwright show-report",
-    "test:debug": "playwright test --debug",
-    "test:functional": "playwright test --grep-invert \\\".screenshot.spec.ts\\\"",
-    "test:screenshots": "playwright test --grep \\\".screenshot.spec.ts\\\"",
-    "test:flaky": "scripts/flaky-test-run.sh",
-    "test:flaky:all": "scripts/flaky-test-run-all.sh",
-    "prepare": "husky"
-  },
-  "dependencies": {
-    "@testing-library/user-event": "^14.6.1",
-    "classnames": "^2.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "zustand": "^4.5.2",
-    "@redux-devtools/extension": "^3.3.0"
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.53.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@types/node": "^22.15.31",
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "@vitejs/plugin-react": "^4.5.2",
-    "@vitest/ui": "^3.2.3",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
-    "jsdom": "^26.1.0",
-    "prettier": "^3.2.5",
-    "typescript": "^5.2.2",
-    "typescript-eslint": "^8.34.0",
-    "vite": "^5.1.6",
-    "vitest": "^3.2.3"
-  }
+    "name": "shri-2025",
+    "private": true,
+    "version": "0.1.0",
+    "type": "module",
+    "scripts": {
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build",
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+        "lint:fix": "eslint . --fix",
+        "format": "prettier --write .",
+        "test": "npm run test:all",
+        "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
+        "test:unit": "vitest run --exclude src/pages/**/*.test.tsx",
+        "test:integration": "vitest run",
+        "test:e2e": "playwright test",
+        "test:unit:ui": "vitest --ui",
+        "test:e2e:ui": "playwright test --ui",
+        "test:e2e:report": "playwright show-report",
+        "test:debug": "playwright test --debug",
+        "test:functional": "playwright test --grep-invert \\\".screenshot.spec.ts\\\"",
+        "test:screenshots": "playwright test --grep \\\".screenshot.spec.ts\\\"",
+        "test:flaky": "scripts/flaky-test-run.sh",
+        "test:flaky:all": "scripts/flaky-test-run-all.sh"
+    },
+    "dependencies": {
+        "classnames": "^2.5.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.3",
+        "zustand": "^4.5.2"
+    },
+    "devDependencies": {
+        "@chromatic-com/storybook": "^1.9.0",
+        "@playwright/test": "^1.53.0",
+        "@redux-devtools/extension": "^3.3.0",
+        "@storybook/addon-essentials": "^8.6.14",
+        "@storybook/addon-interactions": "^8.6.14",
+        "@storybook/addon-links": "^8.6.14",
+        "@storybook/addon-onboarding": "^8.6.14",
+        "@storybook/blocks": "^8.6.14",
+        "@storybook/react": "^8.6.14",
+        "@storybook/react-vite": "^8.6.14",
+        "@storybook/test": "^8.6.14",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
+        "@types/node": "^22.15.31",
+        "@types/react": "^18.2.64",
+        "@types/react-dom": "^18.2.21",
+        "@vitejs/plugin-react": "^4.5.2",
+        "@vitest/ui": "^3.2.3",
+        "eslint": "^8.57.0",
+        "eslint-config-prettier": "^10.1.5",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
+        "jsdom": "^26.1.0",
+        "prettier": "^3.2.5",
+        "storybook": "^8.6.14",
+        "typescript": "^5.2.2",
+        "typescript-eslint": "^8.34.0",
+        "vite": "^5.1.6",
+        "vite-tsconfig-paths": "^5.1.4",
+        "vitest": "^3.2.3"
+    }
 }
