--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         "test:e2e:ui": "playwright test --ui",
         "test:e2e:report": "playwright show-report",
         "test:debug": "playwright test --debug",
-        "test:functional": "playwright test --grep-invert \\\".screenshot.spec.ts\\\"",
-        "test:screenshots": "playwright test --grep \\\".screenshot.spec.ts\\\"",
+        "test:functional": "playwright test --grep-invert \".screenshot.spec.ts\"",
+        "test:screenshots": "playwright test --grep \".screenshot.spec.ts\"",
         "test:flaky": "scripts/flaky-test-run.sh",
         "test:flaky:all": "scripts/flaky-test-run-all.sh"
     },
