feat: add api slice with tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "paths": {
             "@shri/ui-kit/*": ["packages/ui-kit/src/*"],
             "@shri/playwright": ["packages/playwright/src"],
+            "@api": ["src/api"],
             "@app-types/*": ["src/types/*"],
             "@components/*": ["src/components/*"],
             "@hooks/*": ["src/hooks/*"],
