--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "test:ui-snapshot": "npm run test:ui-snapshot -w @shri/ui-kit",
         "test:unit": "vitest run --exclude src/pages/**/*.test.tsx",
         "test:integration": "vitest run",
-        "test:e2e": "playwright test",
+        "test:e2e": "playwright test --project chromium && playwright test --project ui-snapshot",
         "test:unit:ui": "vitest --ui",
         "test:e2e:ui": "playwright test --ui",
         "test:e2e:report": "playwright show-report",
