fix: fix scripts

--- a/package.json
+++ b/package.json
@@ -7,29 +7,22 @@
         "packages/*"
     ],
     "scripts": {
-        "storybook": "npm run storybook -w @shri/ui-kit",
-        "build-storybook": "npm run build-storybook -w @shri/ui-kit",
         "dev": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview",
         "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
         "lint:fix": "eslint . --fix",
         "format": "prettier --write .",
-        "test": "npm run test:all",
-        "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
-        "test:storybook": "npm run test:storybook -w @shri/ui-kit",
-        "test:ui-snapshot": "npm run test:ui-snapshot -w @shri/ui-kit",
-        "test:unit": "vitest run --exclude src/pages/**/*.test.tsx",
-        "test:integration": "vitest run",
-        "test:e2e": "playwright test --project chromium && playwright test --project ui-snapshot",
-        "test:unit:ui": "vitest --ui",
-        "test:e2e:ui": "playwright test --ui",
-        "test:e2e:report": "playwright show-report",
-        "test:debug": "playwright test --debug",
+        "test": "npm run test:unit && npm run test:functional && npm run test:screenshots",
         "test:functional": "playwright test tests/functional/",
         "test:screenshots": "playwright test tests/screenshots/",
+        "test:unit": "vitest run",
+        "test:e2e:ui": "playwright test --ui",
+        "test:storybook": "npm run test:storybook -w @shri/ui-kit",
+        "test:storybook:snapshot": "npm run test:ui-snapshot -w @shri/ui-kit",
         "test:flaky": "scripts/flaky-test-run.sh",
-        "test:flaky:all": "scripts/flaky-test-run-all.sh"
+        "test:flaky:all": "scripts/flaky-test-run-all.sh",
+        "storybook": "npm run storybook -w @shri/ui-kit"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.3",
