--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
         "zustand": "^4.5.2"
     },
     "devDependencies": {
-        "@shri/playwright": "workspace:*",
+        "@axe-core/playwright": "^4.10.2",
         "@chromatic-com/storybook": "^1.9.0",
         "@playwright/test": "^1.53.0",
         "@redux-devtools/extension": "^3.3.0",
+        "@shri/playwright": "workspace:*",
         "@storybook/addon-essentials": "^8.6.14",
         "@storybook/addon-interactions": "^8.6.14",
         "@storybook/addon-links": "^8.6.14",
@@ -54,10 +55,12 @@
         "@types/react-dom": "^18.2.21",
         "@vitejs/plugin-react": "^4.5.2",
         "@vitest/ui": "^3.2.3",
+        "axe-core": "^4.10.3",
         "concurrently": "^9.1.2",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
