--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@storybook/react": "^8.6.14",
         "@storybook/react-vite": "^8.6.14",
         "@storybook/test": "^8.6.14",
+        "@storybook/test-runner": "^0.22.1",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
