--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
+        "analyze": "ANALYZE=true npm run build",
         "preview": "vite preview",
         "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
         "lint:fix": "eslint . --fix",
@@ -26,7 +27,6 @@
         "storybook": "storybook dev -p 6006"
     },
     "dependencies": {
-        "@reduxjs/toolkit": "^2.2.3",
         "@shri/ui-kit": "workspace:*",
         "classnames": "^2.5.1",
         "react": "^18.2.0",
@@ -79,6 +79,7 @@
         "typescript": "^5.2.2",
         "typescript-eslint": "^8.34.0",
         "vite": "^5.2.0",
+        "vite-bundle-analyzer": "^0.22.3",
         "vite-tsconfig-paths": "^5.1.4",
         "vitest": "^3.2.3",
         "wait-on": "^8.0.3"
